--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body class="home-template">
 
     
-<header class="main-header " style="background-image: url(https://www.dropbox.com/s/ef6g56gcp9kdpn5/photo%207-9-15%2C%2012%2013%2006%20pm.jpg?dl=0)">
+<header class="main-header no-cover">
     <nav class="main-nav overlay clearfix">
         
         <!-- <a class="subscribe-button icon-feed" href="https://crazyrandom.github.io/rss/">Subscribe</a> -->
@@ -33,7 +33,7 @@
             <h1 class="page-title">Crazy Random </h1>
             <h2 class="page-description">Just some random thoughts about craziness and data, MCNS and random.
 
-Credits: Cover Image: AKAGI K.L.</h2>
+</h2>
         </div>
     </div>
     <a class="scroll-down icon-arrow-left" href="#content" data-offset="-45"><span class="hidden">Scroll Down</span></a>
